[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/weapons/bulletScript.gd" type="Script" id=1]
[ext_resource path="res://textures/topdownweapons/bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.46168, 4.74808 )

[node name="bullet" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.796078, 0, 1 )
scale = Vector2( 0.018, 0.018 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="hitParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0.101597, -4.13161 )
rotation = 1.5708
emitting = false
amount = 5
lifetime = 0.75
speed_scale = 2.5
spread = 24.57
gravity = Vector2( 0, 0 )
initial_velocity = 8.09
linear_accel = 100.0
damping = 26.83
damping_random = 1.0
angle = 91.9
scale_amount = 2.0
scale_amount_random = 1.0
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="particlesTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="stopParticles" type="Timer" parent="."]
wait_time = 0.15
[connection signal="timeout" from="stopParticles" to="." method="_on_stopParticles_timeout"]
